fixed the footer

--- a/todoapp/src/components/tasklist.module.css
+++ b/todoapp/src/components/tasklist.module.css
@@ -9,6 +9,7 @@
 .myItemName{
     font-weight: bold;
     padding: 20px;
+    cursor: pointer;
 }
 
 .line {
@@ -25,3 +26,6 @@
     cursor: pointer;
 }
 
+.completed {
+    text-decoration: line-through;
+}
