--- a/todoapp/src/App.css
+++ b/todoapp/src/App.css
@@ -1,4 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
     margin: 0;
     font-family: sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
