--- a/todoapp/src/components/footer.module.css
+++ b/todoapp/src/components/footer.module.css
@@ -1,20 +1,21 @@
 .footer {
-    position: fixed;
-    bottom: 0;
+    margin-top: 5rem;
     font-size: 1.5em;
     font-weight: bold;
     text-align: center;
     width: 100%;
+    height: 3rem;
     background-color: blanchedalmond;
-    padding: 10px;
     color: rgb(58, 3, 3);
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
 }
 
-.doneTask {
-    float: left;
-}
 
-.totalTask {
-    float: right;
-    margin-right: 20px;
+@media screen and (max-width: 550px) {
+    .footer {
+        width: 30rem;
+        margin-left: 3.5rem;
+    }
 }
