--- a/todoapp/src/components/form.module.css
+++ b/todoapp/src/components/form.module.css
@@ -35,3 +35,10 @@
 .inputContainer {
     display: flex
 }
+
+@media screen and (max-width: 550px) {
+    .taskform {
+        width: 30rem;
+        margin-left: 3.5rem;
+    }
+}
